test/oscar/compiler/errors/actorNotFound.oscar
message testNow()


actor Tester() {

  receive = {
    | testNow() => {
        Println("Error");
      }
    | die() => {
      }
  }
}

def main() => unit = {
  actor<Lost> tester = spawn actor<Lost>();
  message<testNow>() |> tester;
  message<die>() |> tester;
}
